--- a/SpeedMaster/Storyboards/Onboarding.storyboard
+++ b/SpeedMaster/Storyboards/Onboarding.storyboard
@@ -53,7 +53,7 @@
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HotspotShield collects a minimal amount of data to offer you a fast and reliable VPN service." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x10-U1-WNu">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speed-Bar collects a minimal amount of data to offer you a fast and reliable Speedometer and Weather service." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x10-U1-WNu">
                                                 <rect key="frame" x="16" y="223" width="343" height="54"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="15"/>
@@ -89,7 +89,7 @@
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="https://qr-bar-app.com/policy.html" translatesAutoresizingMaskIntoConstraints="NO" id="6ma-n0-QyF">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="https://speed-bar-app.com/policy.html" translatesAutoresizingMaskIntoConstraints="NO" id="6ma-n0-QyF">
                                                 <rect key="frame" x="16" y="551.5" width="343" height="36"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -259,6 +259,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="privacyIcon" width="25" height="32"/>
+        <image name="privacyIcon" width="28" height="39"/>
     </resources>
 </document>
