--- a/SpeedMaster/Views/Slide/Slide.xib
+++ b/SpeedMaster/Views/Slide/Slide.xib
@@ -94,7 +94,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bE-Xs-6CS">
-                            <rect key="frame" x="48" y="90" width="249" height="64"/>
+                            <rect key="frame" x="48" y="170" width="249" height="64"/>
                             <color key="backgroundColor" red="0.8784313725490196" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="64" id="eg3-DH-X0w"/>
@@ -108,26 +108,26 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Pu-Ls-VS9">
-                            <rect key="frame" x="48" y="170" width="249" height="64"/>
+                            <rect key="frame" x="48" y="90" width="249" height="64"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUy-ud-cUd">
                                     <rect key="frame" x="15" y="8" width="219" height="33"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="17"/>
-                                    <state key="normal" title="Start Monthly Plan">
+                                    <state key="normal" title="Start Yearly Plan">
                                         <color key="titleColor" red="0.8784313725490196" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
-                                        <action selector="startMonthlyTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="e73-KR-7hz"/>
+                                        <action selector="startYearlyTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="rCj-2v-Jem"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bmr-13-NKz">
                                     <rect key="frame" x="15" y="27" width="219" height="29"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
-                                    <state key="normal" title="-- a month">
+                                    <state key="normal" title="-- a year">
                                         <color key="titleColor" red="0.52549019607843139" green="0.52549019607843139" blue="0.52549019607843139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
-                                        <action selector="startMonthlyTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="yhs-2S-86X"/>
+                                        <action selector="startYearlyTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="tP0-zA-KgK"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -193,6 +193,7 @@
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="aM0-su-VQF" firstAttribute="leading" secondItem="jdh-VE-Ciw" secondAttribute="leading" constant="15" id="11g-nO-aYV"/>
+                        <constraint firstItem="7Pu-Ls-VS9" firstAttribute="top" secondItem="gqW-BE-8OF" secondAttribute="bottom" constant="34" id="5cZ-YW-65j"/>
                         <constraint firstItem="0Kz-K4-wry" firstAttribute="centerX" secondItem="jdh-VE-Ciw" secondAttribute="centerX" id="Cgz-4t-KGi"/>
                         <constraint firstItem="OLC-sW-bHs" firstAttribute="leading" secondItem="jdh-VE-Ciw" secondAttribute="leading" constant="10" id="Gh7-sY-Zi5"/>
                         <constraint firstItem="gqW-BE-8OF" firstAttribute="top" secondItem="jdh-VE-Ciw" secondAttribute="top" constant="24" id="NMv-nd-46d"/>
@@ -203,11 +204,10 @@
                         <constraint firstItem="aM0-su-VQF" firstAttribute="centerX" secondItem="jdh-VE-Ciw" secondAttribute="centerX" id="d5V-2t-9Uf"/>
                         <constraint firstItem="gqW-BE-8OF" firstAttribute="centerX" secondItem="jdh-VE-Ciw" secondAttribute="centerX" id="gFO-SQ-66R"/>
                         <constraint firstAttribute="trailing" secondItem="OLC-sW-bHs" secondAttribute="trailing" constant="10" id="gcj-qr-lXJ"/>
-                        <constraint firstItem="0bE-Xs-6CS" firstAttribute="top" secondItem="gqW-BE-8OF" secondAttribute="bottom" constant="34" id="iPa-Qo-lIr"/>
                         <constraint firstAttribute="bottom" secondItem="OLC-sW-bHs" secondAttribute="bottom" constant="19" id="jeP-9V-SU7"/>
                         <constraint firstItem="0bE-Xs-6CS" firstAttribute="leading" secondItem="jdh-VE-Ciw" secondAttribute="leading" constant="48" id="m9k-2a-ANG"/>
                         <constraint firstItem="0bE-Xs-6CS" firstAttribute="centerX" secondItem="jdh-VE-Ciw" secondAttribute="centerX" id="p2t-Xu-NLQ"/>
-                        <constraint firstItem="7Pu-Ls-VS9" firstAttribute="top" secondItem="0bE-Xs-6CS" secondAttribute="bottom" constant="16" id="qvy-Jy-uRw"/>
+                        <constraint firstItem="0bE-Xs-6CS" firstAttribute="top" secondItem="7Pu-Ls-VS9" secondAttribute="bottom" constant="16" id="tdY-H7-nKC"/>
                         <constraint firstItem="7Pu-Ls-VS9" firstAttribute="height" secondItem="0bE-Xs-6CS" secondAttribute="height" id="uRj-DO-KLQ"/>
                         <constraint firstItem="7Pu-Ls-VS9" firstAttribute="trailing" secondItem="0bE-Xs-6CS" secondAttribute="trailing" id="vte-d1-jGj"/>
                         <constraint firstItem="aM0-su-VQF" firstAttribute="top" secondItem="jdh-VE-Ciw" secondAttribute="top" constant="36" id="wSX-9b-a6O"/>
@@ -273,7 +273,7 @@
                 <outlet property="eulaButton" destination="tk5-Th-uTp" id="TWA-Eq-0Er"/>
                 <outlet property="fromBlackToYellow" destination="TOm-5K-sg6" id="dA8-lh-F2d"/>
                 <outlet property="fromNotNowToTop" destination="6nz-Y8-zKY" id="gxo-D4-UDl"/>
-                <outlet property="fromTryFreeToProceed" destination="iPa-Qo-lIr" id="U39-1o-HXj"/>
+                <outlet property="fromStartYearlyToProceed" destination="5cZ-YW-65j" id="Mcx-yD-7AP"/>
                 <outlet property="fromUpgradeToTop" destination="enh-Ah-Btn" id="NIK-rC-Vzo"/>
                 <outlet property="gpsLabel" destination="aM0-su-VQF" id="2Zx-RH-tA3"/>
                 <outlet property="imageView" destination="6wn-MO-7ek" id="S6H-qz-0Gh"/>
@@ -287,9 +287,9 @@
                 <outlet property="proceedWithBasic" destination="gqW-BE-8OF" id="Xyq-j3-kfz"/>
                 <outlet property="speedImage" destination="qmx-c1-OWa" id="epf-Vp-5pi"/>
                 <outlet property="startFreeLabel" destination="ywf-9z-Ppp" id="sBj-5N-eQL"/>
-                <outlet property="startMonthlyButton" destination="yUy-ud-cUd" id="oME-q2-dwR"/>
-                <outlet property="startMonthlySecondButton" destination="bmr-13-NKz" id="gyC-MB-IyP"/>
                 <outlet property="startMonthlyView" destination="7Pu-Ls-VS9" id="dEc-28-SF2"/>
+                <outlet property="startYearlyButton" destination="yUy-ud-cUd" id="LhD-Xo-xyV"/>
+                <outlet property="startYearlySecondButton" destination="bmr-13-NKz" id="8yq-yk-NB2"/>
                 <outlet property="topConstraint" destination="jXH-c7-6DM" id="t0Q-yA-MYf"/>
                 <outlet property="trackLabel" destination="0Kz-K4-wry" id="M3c-Ih-NJq"/>
                 <outlet property="tryFreeButton" destination="0bE-Xs-6CS" id="9cT-FH-uW4"/>
